--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,6 @@ version: '3.9'
 services:
   elysia-app:
     build: .
-    # override default entrypoint allows us to do `bun install` before serving
-    entrypoint: []
-    # execute bun install before we start the dev server in watch mode
-    command: "/bin/sh -c 'bun install && bun run --watch src/index.ts'"
-    ports: 
-      -"3000:3000"
-    # setup a host mounted volume to sync changes to the container
-    volumes: ["./:/home/bun/app"]
+    ports: ["3000:3000"]
+    #NOTE: default volume config might be wrong
+    volumes: ["./:/app"]
