--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.50",
   "scripts": {
     "dev": "bun run --watch src/index.ts",
-    "start":"bun run src/index.ts"
+    "start": "bun run src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "elysia": "latest",
+    "ioredis": "^5.3.2"
   },
   "devDependencies": {
     "bun-types": "latest"
