--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "prisma": "^5.9.1",
+    "query-string": "^8.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
