--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma migrate dev && prisma generate && next build",
+    "build": "next build",
+    "db:build":"prisma migrate dev && prisma generate",
     "start": "next start",
     "lint": "next lint"
   },
